added missing cors accept policies to the security config in supplier  and warehouse services